--- a/Sources/Resources/NetworkCell.xib
+++ b/Sources/Resources/NetworkCell.xib
@@ -61,13 +61,13 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QzV-et-yBo" customClass="CustomTextView" customModule="CocoaDebug" customModuleProvider="target">
-                        <rect key="frame" x="9" y="20" width="297" height="104"/>
+                        <rect key="frame" x="9" y="45" width="297" height="79"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="2017-23-21 23:23:23" translatesAutoresizingMaskIntoConstraints="NO" id="kwZ-en-pn0" customClass="CustomTextView" customModule="CocoaDebug" customModuleProvider="target">
-                        <rect key="frame" x="13" y="7" width="136.5" height="18"/>
+                        <rect key="frame" x="9" y="23" width="136.5" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="ObU-lg-hpy"/>
                         </constraints>
@@ -78,15 +78,15 @@
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="v8G-CW-gTr" firstAttribute="top" secondItem="5Uk-na-nYw" secondAttribute="bottom" id="1Dg-eR-EZJ"/>
-                    <constraint firstItem="QzV-et-yBo" firstAttribute="top" secondItem="v8G-CW-gTr" secondAttribute="bottom" constant="4" id="25O-96-7iu"/>
+                    <constraint firstItem="QzV-et-yBo" firstAttribute="top" secondItem="kwZ-en-pn0" secondAttribute="bottom" constant="4" id="25O-96-7iu"/>
                     <constraint firstItem="v8G-CW-gTr" firstAttribute="leading" secondItem="3fN-bI-W2p" secondAttribute="trailing" constant="9" id="Axs-Hx-CJy"/>
-                    <constraint firstItem="kwZ-en-pn0" firstAttribute="leading" secondItem="v8G-CW-gTr" secondAttribute="trailing" constant="4" id="EAy-b1-Q4o"/>
-                    <constraint firstItem="kwZ-en-pn0" firstAttribute="centerY" secondItem="v8G-CW-gTr" secondAttribute="centerY" id="Hqx-Wl-Nz6"/>
                     <constraint firstItem="JC4-1t-BQJ" firstAttribute="leading" secondItem="QzV-et-yBo" secondAttribute="trailing" constant="9" id="ITi-bD-aun"/>
+                    <constraint firstItem="kwZ-en-pn0" firstAttribute="leading" secondItem="3fN-bI-W2p" secondAttribute="trailing" constant="9" id="OSn-7l-NLT"/>
                     <constraint firstAttribute="trailing" secondItem="JC4-1t-BQJ" secondAttribute="trailing" id="TxK-j3-KWn"/>
                     <constraint firstAttribute="bottom" secondItem="3fN-bI-W2p" secondAttribute="bottom" id="ijy-4W-A96"/>
                     <constraint firstItem="3fN-bI-W2p" firstAttribute="leading" secondItem="3rq-bh-2Xs" secondAttribute="leading" id="kZP-qQ-edH"/>
                     <constraint firstItem="QzV-et-yBo" firstAttribute="leading" secondItem="v8G-CW-gTr" secondAttribute="leading" id="kZT-8N-a1b"/>
+                    <constraint firstItem="kwZ-en-pn0" firstAttribute="top" secondItem="v8G-CW-gTr" secondAttribute="bottom" constant="7" id="ktl-8O-kbX"/>
                     <constraint firstAttribute="bottom" secondItem="JC4-1t-BQJ" secondAttribute="bottom" id="uJo-0f-J3P"/>
                     <constraint firstAttribute="bottom" secondItem="QzV-et-yBo" secondAttribute="bottom" constant="16" id="v7f-k6-ZvN"/>
                     <constraint firstItem="5Uk-na-nYw" firstAttribute="leading" secondItem="v8G-CW-gTr" secondAttribute="leading" id="vaS-Rk-0ZP"/>
